Size issue on mobile- switch to firefox

--- a/style.css
+++ b/style.css
@@ -660,7 +660,6 @@ p {
   grid-gap: 10px;
 }
 
-
 .social-media-link {
   font-size: 1rem;
   width: 100%;
@@ -675,6 +674,10 @@ p {
   font-size: 1.3rem;
   margin: 10px 0px 8px;
   padding: 6px;
+}
+
+.links-box {
+  margin: 20px 20px 20px 20px;
 }
 
 .links-box p {
@@ -694,7 +697,13 @@ p {
 
 .links-input {
   width: 95%;
+  line-height: 3;
   margin-bottom: 5px;
+}
+
+.input-style::placeholder{
+    text-indent: 5px;
+    font-size: 1rem;
 }
 
 }
@@ -722,16 +731,7 @@ h4 {
 .search-box {
   display: grid;
   grid-template-columns: 60% 40%;
-  /*border-bottom: solid 1px #89909C;*/
 }
-
-/*.search-input::placeholder{
-    background-image: url(images/search-gray.png);
-    background-repeat: no-repeat;
-    text-indent: 30px;
-    height: 40px;
-    font-size: 1rem;
-}*/
 
 .search-menu {
   display: none;
@@ -739,21 +739,19 @@ h4 {
 
 .search-input {
   grid-column: 1;
-/*  height: 50px;
-  font-size: 1rem;
-  text-indent: 30px;
-  border: hidden;
-  margin: 5px 0px 0px 15px;*/
   width: 100%;
 }
 
 .div-search-btns {
-  /*cursor: pointer;*/
   grid-column: 2;
-/*  justify-self: right;
-  display: flex;
-  margin-right: 20px;
-  border-left: solid 1px #89909C;*/
+}
+
+.job-descr-box {
+    margin: 20px 20px 20px 20px;
+}
+
+.links-box {
+    margin: 20px 20px 20px 20px;
 }
 
 h1 {
@@ -785,6 +783,10 @@ h1 {
   margin: 0px;
   border-bottom: solid 1px #89909C;
   margin: 0 auto;
+}
+
+.job-descr-box {
+    margin: 20px 20px 20px 20px;
 }
 
 .job-descr-box h2 {
@@ -851,7 +853,7 @@ h1 {
 
 
 /*===Media Queries======================================*/
-@media (max-width: 500px){
+@media (max-width: 510px){
 
 
 .parent-container {
@@ -864,12 +866,17 @@ h1 {
   display: none;
 }
 
+/*.search-box {
+  display: none;
+}*/
+
 .search-menu {
   display: none; 
 }
 .search-input {
-    grid-column: 1
-    }
+    grid-column: 1;
+    height: 44px;
+}
 
 .div-search-btns {
   grid-column: 2/5;
@@ -881,11 +888,41 @@ h1 {
   grid-auto-flow: dense;
 }
 
+h1 {
+  padding: 25px 0px 10px 5px;
+}
+
+.location-post {
+  margin: 5px 0px;
+}
+
+.title-btns-box {
+  margin: 15px 0px 0px 5px;
+  width: 215px;
+  border: solid 1px black;
+}
+
+.circle-btn {
+  border-radius: 55px;
+  height: 45px;
+  width: 45px;
+  margin-left: 22px;
+}
+
 .nav-bar-box {
+  background-color: #354051;
   display: initial;
   grid-column: 1/2;
   display: flex;
   flex-direction: column;
+}
+
+.nav-bar-box p {
+    font-size: 1.1rem;
+    color: #FFFFFF;
+    border-bottom: none;
+    padding: 10px;
+    margin: 0px 0px 0px 5px;
 }
 
 .title-box {
@@ -894,6 +931,26 @@ h1 {
   flex-direction: column;
   justify-content: flex-start;
 }
+
+.location-post-text {
+  font-size: .7rem;
+}
+
+.location-post-text a {
+  font-size: .6rem;
+}
+.location-post-icon {
+    height: 16px;
+}
+
+.open-btn {
+  display: none;
+}
+
+.title-btns-box {
+  margin-left: 5px;
+}
+
 
 .graphs {
   display: none;
